# geoengine-python

./: .ci_instance  .coverage  .gitignore  .pylintrc  CNAME  LICENSE  README.md  api.html  auth.html  backports.html  bors.toml  check.sh  colorizer.html  datasets.html  deps.txt  error.html  index.html  layers.html  ml.html  mypy.ini  permissions.html  pyproject.toml  raster.html  raster_workflow_rio_writer.html  requirements.txt  resource_identifier.html  setup.cfg  tasks.html  test_all_notebooks.py  test_notebook.py  test_util.py  types.html  util.html  workflow.html
.github/: .backend_git_ref  dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint-pr-title.yml  release.yml  test-python.yml
examples/: add_public_era5_datasets_and_layers.ipynb  add_public_raster_dataset.ipynb  add_public_vector_dataset.ipynb  add_public_vector_dataset_upload.ipynb  agg_sentinel_2_tiles_ecuador.ipynb  band_neighborhood_aggregate.ipynb  colorizer.ipynb  copernicus_dataspace.ipynb  crash.ipynb  create_era5_dataset-defs_ecuador.ipynb  create_era5_land_dataset-defs_ecuador.ipynb  create_respect_vector_datasets.ipynb  create_sentinel2_agg_ecuador.ipynb  data_usage.ipynb  expression.ipynb  interpolation.ipynb  large_raster_download_to_gdal.ipynb  layers.ipynb  ml_pipeline.ipynb  multi_user_queries.ipynb  multiband_raster_stream.ipynb  ndvi_inverse_points.ipynb  ndvi_ports.ipynb  nrw_crop_extern copy 2.ipynb  nrw_crop_extern.ipynb  nrw_crop_extern_prep_data.ipynb  nrw_crop_extern_s2_workflow_to_datasets.ipynb  nrw_crop_extern_train.ipynb  operators.ipynb  permissions.ipynb  plots.ipynb  quota.ipynb  raster-stream.ipynb  raster_dataset.ipynb  raster_download.tif  raster_stacker_debugging.ipynb  raster_stream.ipynb  raster_stream_to_gdal.ipynb  re_add_raster_dataset_from_upload.ipynb  respect.ipynb  (+14 more)
examples/data-spaces/: copernicus_dataspace.ipynb
examples/export_data/: large_raster_download_to_gdal.ipynb
examples/interactive_ml/: labeling.py
examples/interactive_ml/app/: Simple Random Forest Two-Class Classifier on Sentinel-2 Images.ipynb
examples/ml_water_bodies/: app.ipynb  click2.ipynb  deficiancies.md  foo.geojson  labeling.py  labels.geojson  labels2.geojson  mpl_click.ipynb  non_water.geojson  water copy 2.geojson  water_bodies copy.ipynb  water_bodies.html  water_bodies.ipynb  water_bodies2.html  widgets.ipynb
examples/s2_field_combination_extern_rf_train/: Readme.md  arr_0.tif  debug.ipynb  large_raster_download.ipynb  nrw_crop_extern_prep_data.ipynb  nrw_crop_extern_s2_workflow.ipynb  nrw_crop_extern_s2_workflow_to_datasets.ipynb  nrw_crop_extern_s2_workflow_to_datasets_with_timeshift.ipynb  nrw_crop_extern_s2_workflow_to_datasets_with_timeshift_onnx.ipynb  nrw_crop_extern_train.ipynb  re_add_raster_dataset_from_upload.ipynb
examples/test_data/sentinel_2_ecador/: b04.json  b08.json
geoengine/: __init__.py  api.py  auth.html  auth.py  backports.py  client.py  colorizer.py  datasets.py  error.py  layers.py  lib.py  ml.py  permissions.py  raster.py  raster_workflow_gdal_writer.py  raster_workflow_rio_writer.py  resource_identifier.py  tasks.py  types.html  types.py  util.py  workflow.py
geoengine/unstable/: __init__.py  workflow_blueprints.py  workflow_operators.py
geoengine/workflow_builder/: __init__.py  blueprints.py  operators.py
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: __init__.py  datasets_api.py  general_api.py  layers_api.py  ogcwcs_api.py  ogcwfs_api.py  ogcwms_api.py  permissions_api.py  plots_api.py  projects_api.py  session_api.py  spatial_references_api.py  tasks_api.py  uploads_api.py  user_api.py  workflows_api.py
openapi_client/models/: __init__.py  aborted_task_status.py  add_collection200_response.py  add_dataset.py  add_layer.py  add_layer_collection.py  add_role.py  auto_create_dataset.py  auto_ogr_source_time_format.py  axis_order.py  bounding_box2_d.py  breakpoint.py  classification_measurement.py  classification_measurement_with_type.py  collection_item.py  collection_type.py  color_param.py  color_param_static.py  colorizer.py  colorizer_palette.py  colorizer_rgba.py  completed_task_status.py  continuous_measurement.py  continuous_measurement_with_type.py  coordinate2_d.py  create_dataset.py  create_dataset_handler200_response.py  create_project.py  csv_header.py  custom_ogr_source_time_format.py  data_id.py  data_id_internal.py  data_path.py  data_path_one_of.py  data_path_one_of1.py  dataset.py  dataset_definition.py  dataset_id_resource_id.py  dataset_listing.py  dataset_resource.py  (+206 more)
src/geoengine/: auth.py  lib.py
tests/: __init__.py  ge_test.py  test.py  test_auth.py  test_colorizer.py  test_data_usage.py  test_datasets.py  test_layers.py  test_ml.py  test_plot.py  test_provenance.py  test_raster.py  test_tasks.py  test_types.py  test_upload.py  test_util.py  test_wcs.py  test_wfs.py  test_wms.py  test_workflow_builder_blueprints.py  test_workflow_builder_operators.py  test_workflow_raster_stream.py  test_workflow_storage.py  test_workflow_vector_stream.py  util.py
workflow_builder/: blueprints.html  index.html  operators.html
