[metadata]
name = geoengine
version = 0.8.0
author = Geo Engine GmbH
author_email = info@geoengine.de
description = A package for easy access to Geo Engine instances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geo-engine/geoengine-python
project_urls =
    Bug Tracker = https://github.com/geo-engine/geoengine-python
classifiers =
    Programming Language :: Python :: 3
    Topic :: Database :: Front-Ends

[options]
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    geoengine-openapi-client == 0.0.12
    geopandas >=0.9,<0.15
    matplotlib >=3.5,<3.8
    numpy >=1.21,<2
    owslib >=0.27,<0.30
    pillow >=9.0,<10
    pyarrow >=10.0,<14
    python-dotenv >=0.19,<1.1
    rasterio >=1.3,<2
    requests >= 2.26,<3
    rioxarray >=0.9.1, <0.10
    StrEnum >=0.4.6,<0.5 # TODO: use from stdlib when `python_requires = >=3.11`
    vega >= 3.5,<4
    websockets >= 10.0,<11
    xarray >=0.19,<2024.3
    urllib3 >= 2.0, < 2.3
    pydantic >= 1.10.5, < 2
    skl2onnx >=1.17,<2

[options.extras_require]
dev =
    build >=0.7,<0.11
    mypy >=0.97,<2.0
    pdoc3 >=0.10,<0.11
    pycodestyle >=2.8,<3 # formatter
    pylint >=2.11,<3 # code linter
    setuptools >=42,<68
    twine >=3.4,<5 # PyPI
    types-setuptools >= 71.1 # mypy type hints
    types-requests >=2.26,<3 # mypy type hints
    wheel >=0.37,<0.44
test =
    pytest >=6.3,<8
    requests_mock >=1.9,<2
    scikit-learn >=1.5,<1.6
examples =
    cartopy==0.21.1  # for WMS example
    ipympl >=0.9.4,<0.10 # for ML example
    ipywidgets >=8.1.5,<9  # for ML example
    scipy >=1.7,<2 # for WMS example


[options.packages.find]
where = .

[pycodestyle]
max-line-length = 120
ignore =
    # line length is check with pylint
    E501,
    # one of W503 or W504 must be ignored
    W503
exclude = build,env*
